NetBeansIDE_8dot2_revision

--- a/iparaJava.Core/nbproject/project.properties
+++ b/iparaJava.Core/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.8.1.jar=C:\\Users\\fcoskun\\Desktop\\gson-2.8.1.jar
 file.reference.gson-2.8.1.jar-1=C:\\Projects\\netbeans\\ipara-java\\core\\gson-2.8.1.jar
+file.reference.gson-2.8.1.jar-2=..\\gson-2.8.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.1.jar}:\
-    ${file.reference.gson-2.8.1.jar-1}
+    ${file.reference.gson-2.8.1.jar-1}:\
+    ${file.reference.gson-2.8.1.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
