NetBeansIDE_8dot2_revision

--- a/iParaJava.WebSamples/nbproject/project.properties
+++ b/iParaJava.WebSamples/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.1.jar=C:\\Users\\fcoskun\\Desktop\\gson-2.8.1.jar
+file.reference.gson-2.8.1.jar=../gson-2.8.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -73,7 +73,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.iparaJava_Core=../iparaJava.Core
