--- a/iparaJava.Core/nbproject/private/private.properties
+++ b/iparaJava.Core/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
-file.reference.gson-2.8.1.jar=C:\\Projects\\netbeans\\ipara-java\\core\\gson-2.8.1.jar
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Oaksoy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
