--- a/iParaJava.WebSamples/nbproject/private/private.properties
+++ b/iParaJava.WebSamples/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Development\\netbeans\\glassfish-4.1.1\\glassfish;C:\\
 j2ee.server.middleware=C:/Development/netbeans/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=default
 user.properties.file=C:\\Users\\Oaksoy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
